[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io/"
license = "Unlicense"
name = "pallet-join-type"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}
frame-benchmarking = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", optional = true}
frame-support = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
frame-system = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
log = {version = "0.4.16"}
pallet-balances = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
scale-info = {version = "2.0.1", default-features = false, features = ["derive"]}
sp-std = {version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
url = {version = "2", features = ["serde"]}

serde = {version = "1.0.136", optional = true, features = ["derive"]}
# serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
lite-json = {version = "0.2.0", default-features = false, defaults = ["no_std"]}
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-core = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}

# Local
gafi-primitives = {version = "4.0.0-dev", default-features = false, path = "../../primitives"}
proof-address-mapping = {default-features = false, version = "4.0.0-dev", path = "../address-mapping"}

# [dev-dependencies]

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "pallet-balances/std",
  "serde",
  "sp-io/std",
  "proof-address-mapping/std",
  "sp-runtime/std",
  "sp-core/std"
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
