[package]
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Runtime, ready for hacking together a parachain."
edition = "2021"
homepage = "https://substrate.io"
license = "Unlicense"
name = "gari-runtime"
repository = "https://github.com/grindytech/cumulus/"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
hex-literal = {version = "0.3.4", optional = true}
log = {version = "0.4.16", default-features = false}
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
serde = { version = "1.0.101", optional = true, default-features = false, features = [ "derive" ] }
smallvec = "1.6.1"

# Local Dependencies
gafi-primitives = {version = "4.0.0-dev", default-features = false, path = "../../primitives"}
runtime-common = {package = "runtime-common", path = "../common", default-features = false}

# Local Pallets
gafi-tx = {version = "4.0.0-dev", default-features = false, path = "../../pallets/gafi-tx"}
game-creator = {version = "4.0.0-dev", default-features = false, path = "../../pallets/game-creator"}
pallet-cache = {version = "4.0.0-dev", default-features = false, path = "../../pallets/pallet-cache"}
pallet-faucet = {version = "4.0.0-dev", default-features = false, path = "../../pallets/pallet-faucet"}
pallet-player = {version = "4.0.0-dev", default-features = false, path = "../../pallets/player"}
pallet-pool = {version = "4.0.0-dev", default-features = false, path = "../../pallets/pool"}
pallet-pool-names = {version = "4.0.0-dev", default-features = false, path = "../../pallets/pool-names"}
proof-address-mapping = {version = "4.0.0-dev", default-features = false, path = "../../pallets/address-mapping"}
sponsored-pool = {version = "4.0.0-dev", default-features = false, path = "../../pallets/sponsored-pool"}
staking-pool = {version = "4.0.0-dev", default-features = false, path = "../../pallets/staking-pool"}
upfront-pool = {version = "4.0.0-dev", default-features = false, path = "../../pallets/upfront-pool"}

# Frontier
fp-rpc = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}
fp-self-contained = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}
pallet-base-fee = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}
pallet-dynamic-fee = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}
pallet-ethereum = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}
pallet-evm = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}
pallet-evm-precompile-modexp = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}
pallet-evm-precompile-sha3fips = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}
pallet-evm-precompile-simple = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}
pallet-hotfix-sufficients = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}

# Substrate
frame-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.26"}
frame-executive = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
frame-system-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.26"}
frame-system-rpc-runtime-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
frame-try-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.26"}
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
pallet-randomness-collective-flip = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
pallet-sudo = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
pallet-timestamp = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
pallet-transaction-payment = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
pallet-transaction-payment-rpc-runtime-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
pallet-treasury = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
sp-block-builder = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
sp-inherents = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
sp-offchain = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
sp-session = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
sp-transaction-pool = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
sp-version = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
pallet-collective = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26"}
pallet-scheduler = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }

# Polkadot
pallet-xcm = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26"}
polkadot-parachain = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26"}
polkadot-runtime-common = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26"}
xcm = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26"}
xcm-builder = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26"}
xcm-executor = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26"}

# Cumulus
cumulus-pallet-dmp-queue = {git = "https://github.com/grindytech/cumulus", default-features = false, branch = "gafi-polkadot-v0.9.26"}
cumulus-pallet-parachain-system = {git = "https://github.com/grindytech/cumulus", default-features = false, branch = "gafi-polkadot-v0.9.26"}
cumulus-pallet-xcm = {git = "https://github.com/grindytech/cumulus", default-features = false, branch = "gafi-polkadot-v0.9.26"}
cumulus-pallet-xcmp-queue = {git = "https://github.com/grindytech/cumulus", default-features = false, branch = "gafi-polkadot-v0.9.26"}
cumulus-primitives-core = {git = "https://github.com/grindytech/cumulus", default-features = false, branch = "gafi-polkadot-v0.9.26"}
cumulus-primitives-timestamp = {git = "https://github.com/grindytech/cumulus", default-features = false, branch = "gafi-polkadot-v0.9.26"}
cumulus-primitives-utility = {git = "https://github.com/grindytech/cumulus", default-features = false, branch = "gafi-polkadot-v0.9.26"}
nimbus-primitives = { git = "https://github.com/grindytech/nimbus", branch = "gafi-polkadot-v0.9.26", default-features = false }
pallet-author-inherent = { git = "https://github.com/grindytech/nimbus", branch = "gafi-polkadot-v0.9.26", default-features = false }
pallet-author-slot-filter = { git = "https://github.com/grindytech/nimbus", branch = "gafi-polkadot-v0.9.26", default-features = false }
parachain-info = {git = "https://github.com/grindytech/cumulus", default-features = false, branch = "gafi-polkadot-v0.9.26"}

pallet-parachain-staking = { git = "https://github.com/grindytech/moonbeam", default-features = false, branch = "gafi-polkadot-v0.9.26" }
pallet-author-mapping = { git = "https://github.com/grindytech/moonbeam", branch = "gafi-polkadot-v0.9.26", default-features = false }
session-keys-primitives = { git = "https://github.com/grindytech/moonbeam", default-features = false, branch = "gafi-polkadot-v0.9.26" }

[features]
default = [
  "std",
]
std = [
  "codec/std",
  "log/std",
  "scale-info/std",
  "serde",
  "cumulus-pallet-dmp-queue/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-pallet-xcm/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-timestamp/std",
  "cumulus-primitives-utility/std",
  "pallet-parachain-staking/std",
  "nimbus-primitives/std",
  "pallet-author-inherent/std",
  "pallet-author-slot-filter/std",
  "pallet-author-mapping/std",
  "session-keys-primitives/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-treasury/std",
  "pallet-xcm/std",
  "parachain-info/std",
  "polkadot-parachain/std",
  "polkadot-runtime-common/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "xcm/std",
  "fp-rpc/std",
  "pallet-ethereum/std",
  "pallet-evm/std",
  "fp-self-contained/std",
  "pallet-base-fee/std",
  "pallet-dynamic-fee/std",
  "pallet-evm-precompile-modexp/std",
  "pallet-evm-precompile-sha3fips/std",
  "pallet-evm-precompile-simple/std",
  "runtime-common/std",
  "proof-address-mapping/std",
  "pallet-pool-names/std",
  "gafi-tx/std",
  "game-creator/std",
  "pallet-cache/std",
  "pallet-faucet/std",
  "pallet-player/std",
  "pallet-pool/std",
  "sponsored-pool/std",
  "staking-pool/std",
  "upfront-pool/std",
  "gafi-primitives/std",
  "pallet-collective/std",
  "pallet-scheduler/std",
]

runtime-benchmarks = [
  "hex-literal",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "cumulus-pallet-xcmp-queue/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-ethereum/runtime-benchmarks",
  "pallet-evm/runtime-benchmarks",
  "upfront-pool/runtime-benchmarks",
  "staking-pool/runtime-benchmarks",
  "pallet-pool/runtime-benchmarks",
  "gafi-tx/runtime-benchmarks",
  "proof-address-mapping/runtime-benchmarks",
  "pallet-faucet/runtime-benchmarks",
  "sponsored-pool/runtime-benchmarks",
  "game-creator/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
]

try-runtime = [
  "frame-executive/try-runtime",
  "frame-try-runtime",
]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []
